# essential-cardano-ai-assistant

./: .env  .gitignore  AI assistant knowledge base.md  CLAUDE.md  Docs & Community AI Specialist Group - 2025_08_27 05_59 PDT - Notes by Gemini.md  conversion-summary.md  docs-community-ai-specialist-group-2025-08-27.md  migration_strategy.md  router-flow-technical-specs.md  session_progress_summary.md  setup_extractor.sh  unified_system_prompt.md  url_reference_guide.md  web_crawling_approach_summary.md  website-integration-roadmap.md
.claude/: settings.local.json
archive/: mdx_to_txt_converter.py
basic_slack_backend/: .env.yaml.template  Dockerfile  Makefile  README.md  SETUP.md  main.py  pyproject.toml
basic_slack_backend/for_reference_only_intermediary-service/: session-summary-2025-09-25.md
basic_slack_backend/for_reference_only_intermediary-service/cardano-ai-slack-bridge/: .env.old  .gitignore  Dockerfile  README.md  cloudbuild.yaml  main.py  requirements.txt  test_globant.py
basic_slack_backend/your_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
cardano-docs-dataset-2025-09-19/: README.md  docs.cardano.org.json  docs.cardano.org_about-cardano_contributions.json  docs.cardano.org_about-cardano_evolution_about-hard-forks.json  docs.cardano.org_about-cardano_evolution_cardano-design-rationale.json  docs.cardano.org_about-cardano_evolution_eras-and-phases.json  docs.cardano.org_about-cardano_evolution_upgrades_allegra.json  docs.cardano.org_about-cardano_evolution_upgrades_alonzo.json  docs.cardano.org_about-cardano_evolution_upgrades_chang.json  (+73 more)
(+1939 files in other folders)
